--- a/README
+++ b/README
@@ -5,13 +5,13 @@ I) What OpenAlchemist needs ?
 
 OpenAlchemist is based on ClanLib 0.8 RC2. You must install it before compiling this game. You can find the last version of clanlib at: http://www.clanlib.org
 
-You may have to edit the /etc/ld.so.conf and add to it "/etc/local/lib". Run "ldconfig" next in root.
+You may have to edit the /etc/ld.so.conf and add to it "/etc/local/lib". Then run "ldconfig" as root.
 
 If you understand french, you can read a tutorial here: http://kephpage.free.fr/note.php?mid=197
 
 II) How to compile it
 
-You should just tape "make" in this repertory. If it doesn't work, you should edit the makefile.
+You should just tape "make" in this folder. If it doesn't work, you should edit the makefile.
 
 In the future, OpenAlchemist will have a simplified compilation system with autoconf, automake, ect...
 
@@ -20,11 +20,11 @@ III) How to contact us
 You can contact the coder at kepho.o (at) gmail.com
 You can contact the graphist at guigozz (at) gmail.com
 
-IV) Licenses
+IV) Licensing
 
 Code is protected by GNU GPL (see CODE-LICENSE)
 Graphics are protected by http://creativecommons.org/licenses/by-sa/2.0/fr/
 
-V) Derivated projets
+V) Derivated projects
 
-If you want to make a derivated project with OpenAlchemist code or graphs, you can do it. A message from you to show us your project will  be apreciated (we're curious :)).
+If you want to make a derivated project with OpenAlchemist code or graphs, you can do it. A message from you to show us your project will  be appreciated (we're curious :)).
