--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-* 0.2 * - 14/08/2006
+* 0.2 * - 15/08/2006
 
 #52 : Ajout du changement de skin temporaire (F9) et début de stockage des options dans un fichier
 #53 : Un raté
@@ -28,6 +28,8 @@
 #155 : Amélioration du selecteur de skins (paramétrage via XML + sauvegarde du theme)
 #161 : Meilleur affichage des scores (avec séparation des milliers)
 #163 : La touche entrer quitte le mode game over
+#169 : Changement de \n par std::endl dans main.cpp, changement des scores (arrondis), petites optimisations
+#171 : On fixe des scores
 
 
 
