--- a/README
+++ b/README
@@ -32,3 +32,7 @@ Graphics are protected by http://creativecommons.org/licenses/by-sa/2.0/fr/
 VI) Derivated projects
 
 If you want to make a derivated project with OpenAlchemist code or graphs, you can do it. A message from you to show us your project will  be appreciated (we're curious :)).
+
+VII) Special Thanks
+
+Special thanks to silkut for his win32 port and MrPouit for his ubuntu packages.
