--- a/software/README
+++ b/software/README
@@ -3,21 +3,17 @@ OpenAlchemist - Development version
 
 I) What OpenAlchemist needs ?
 
-OpenAlchemist is based on ClanLib 0.8 RC2. You must install it before compiling this game. You can find the last version of clanlib at: http://www.clanlib.org
+OpenAlchemist is based on ClanLib 0.8. You must install it before compiling this game. You can find the last version of clanlib at: http://www.clanlib.org
 
 You may have to edit the /etc/ld.so.conf and add to it "/etc/local/lib". Then run "ldconfig" as root.
 
-If you understand french, you can read a tutorial here: http://kephpage.free.fr/note.php?mid=197
-
 II) How to compile it
 
-You should just tape "make" in this folder. If it doesn't work, you should edit the makefile. You can install software in /usr/local/games/ by tipping "make install" (and "uninstall" if you want to delete the game)
-
-In the future, OpenAlchemist will have a simplified compilation system with autoconf, automake, ect...
+First, you must have installed Scons (http://http://www.scons.org/) on your computer. Then, you should just tape "scons" in this folder. If it doesn't work, you should edit the SConstruct file.
 
 III) How to play with it
 
-After compiling, tip "./openalchemist" or just "openalchemist" if you tip "make install". Option --sdl use SDL , --opengl use OpenGL.
+After compiling, tip "./openalchemist-config".
 
 IV) How to contact us
 
@@ -26,12 +22,12 @@ You can contact the graphist at guigozz (at) gmail.com
 
 V) Licensing
 
-Code is protected by GNU GPL (see CODE-LICENSE)
+Code is protected by GNU GPL 2+ (see CODE-LICENSE)
 Graphics are protected by http://creativecommons.org/licenses/by-sa/2.0/fr/
 
 VI) Derivated projects
 
-If you want to make a derivated project with OpenAlchemist code or graphs, you can do it. A message from you to show us your project will  be appreciated (we're curious :)).
+If you want to make a derivated project with OpenAlchemist code or graphs, you can do it. But a message from you to show us your project will  be appreciated (we're curious :)).
 
 VII) Special Thanks
 
