--- a/software/README
+++ b/software/README
@@ -7,28 +7,38 @@ OpenAlchemist is based on ClanLib 0.8. You must install it before compiling this
 
 You may have to edit the /etc/ld.so.conf and add to it "/etc/local/lib". Then run "ldconfig" as root.
 
-II) How to compile it
+II) How to install it
 
 First, you must have installed Scons (http://http://www.scons.org/) on your computer. Then, you should just tape "scons" in this folder. If it doesn't work, you should edit the SConstruct file.
 
+Then tip :
+"./install" (with root)
+(will be install into /usr/local/games/openalchemist folder)
+
 III) How to play with it
 
-After compiling, tip "./openalchemist-config".
+After compiling, tip "openalchemist-config".
 
-IV) How to contact us
+IV) How to package it
+
+Tip "./make-package.sh" then look into "package.tar.gz" to understand. 
+Dependencies : clanlib
+If you to make a dependencies-free binary, just tip "./make-static.sh" and replace /usr/local/games/openalchemist/openalchemit by openalchemist-static in package file.
+
+V) How to contact us
 
 You can contact the coder at kepho.o (at) gmail.com
 You can contact the graphist at guigozz (at) gmail.com
 
-V) Licensing
+VI) Licensing
 
 Code is protected by GNU GPL 2+ (see CODE-LICENSE)
 Graphics are protected by http://creativecommons.org/licenses/by-sa/2.0/fr/
 
-VI) Derivated projects
+VII) Derivated projects
 
 If you want to make a derivated project with OpenAlchemist code or graphs, you can do it. But a message from you to show us your project will  be appreciated (we're curious :)).
 
-VII) Special Thanks
+VIII) Special Thanks
 
 Special thanks to silkut for his win32 port and MrPouit for his ubuntu packages.
