Drawing scores durint HightScoresState + fixing README

--- a/software/README
+++ b/software/README
@@ -17,7 +17,7 @@ Then tip :
 
 III) How to play with it
 
-After compiling, tip "openalchemist-config".
+After compiling, tip "openalchemist".
 
 IV) How to package it
 
