--- a/software/TODO
+++ b/software/TODO
@@ -1,10 +1,9 @@
 TODO for 0.3
 ------------
 
-- menu : would you start a new game ? (on game over)
+- menu : would you start a new game ? (on game over) -> I don't realy want to make it
 - combo
-- screen refresh syncrhonisation (if possible)
-- cancel best score if F5
+- screen refresh syncrhonisation (if possible) -> Works with OpenGL
 - load_gfx for menus when changing skin
 
 TODO for 0.4
