--- a/software/TODO
+++ b/software/TODO
@@ -6,9 +6,12 @@ TODO for 0.3
 	-> Best score // ou alors New high score!
 	-> Do you want to retry?
 - Bug de chargement de menu
+- Supprimer la limitation de dépassement
+- Compter la dernière pièce ajoutée sur le plateau
 - Disparition des pièces (celles qu'on fait tourner) après trip dans les menus
 - Combos
 - screen refresh syncrhonisation -> ?
+- press return to start ?
 
 TODO for 0.4
 ------------
