--- a/software/README
+++ b/software/README
@@ -9,36 +9,27 @@ You may have to edit the /etc/ld.so.conf and add to it "/etc/local/lib". Then ru
 
 II) How to install it
 
-First, you must have installed Scons (http://http://www.scons.org/) on your computer. Then, you should just tape "scons" in this folder. If it doesn't work, you should edit the SConstruct file.
-
-Then tip :
-"./install.sh" (with root)
-(will be install into /usr/local/games/openalchemist folder)
+See "INSTALL"
 
 III) How to play with it
 
 After compiling, tip "openalchemist".
 
-IV) How to package it
-
-Tip "./make-package.sh" then look into "package.tar.gz" to understand. 
-Dependencies : clanlib
-If you want to make a dependencies-free binary, just tip "./make-static.sh" and replace /usr/local/games/openalchemist/openalchemit by openalchemist-static in package file.
-
-V) How to contact us
+IV) How to contact us
 
 You can contact the coder at kepho.o (at) gmail.com
 You can contact the graphist at guigozz (at) gmail.com
+Official website is : www.openalchemist.com
 
-VI) Licensing
+V) Licensing
 
 Code is protected by GNU GPL 2+ (see CODE-LICENSE)
 Graphics are protected by http://creativecommons.org/licenses/by-sa/2.0/fr/
 
-VII) Derivated projects
+VI) Derivated projects
 
 If you want to make a derivated project with OpenAlchemist code or graphs, you can do it. But a message from you to show us your project will  be appreciated (we're curious :)).
 
-VIII) Special Thanks
+VII) Special Thanks
 
 Special thanks to silkut for his win32 port and MrPouit for his ubuntu packages.
