--- a/software/autom4te.cache/traces.1
+++ b/software/autom4te.cache/traces.1
@@ -1,4 +1,4 @@
-m4trace:configure.ac:2: -1- AC_INIT([openalchemist], [0.3], [openalchemist@gmail.com])
+m4trace:configure.ac:2: -1- AC_INIT([openalchemist], [0.3], [contact@openalchemist.com])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -390,21 +390,21 @@ m4trace:configure.ac:15: -1- m4_pattern_allow([^clanlib_CFLAGS$])
 m4trace:configure.ac:15: -1- AC_SUBST([clanlib_LIBS])
 m4trace:configure.ac:15: -1- AC_SUBST_TRACE([clanlib_LIBS])
 m4trace:configure.ac:15: -1- m4_pattern_allow([^clanlib_LIBS$])
-m4trace:configure.ac:26: -1- AC_CONFIG_HEADERS([src/config.h])
-m4trace:configure.ac:27: -1- AC_CONFIG_FILES([Makefile build/Makefile])
-m4trace:configure.ac:28: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:28: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:25: -1- AC_CONFIG_HEADERS([src/config.h])
+m4trace:configure.ac:26: -1- AC_CONFIG_FILES([Makefile build/Makefile])
+m4trace:configure.ac:27: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:27: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([MKDIR_P])
