--- a/software/TODO
+++ b/software/TODO
@@ -12,6 +12,7 @@ TODO for 0.3
 - Combos
 - screen refresh syncrhonisation -> ?
 - press return to start ?
+- autoriser le dépassement jusqu'à la fin des réactions en chaine
 
 TODO for 0.4
 ------------
