--- a/software/TODO
+++ b/software/TODO
@@ -13,6 +13,7 @@ TODO for 0.3
 - screen refresh syncrhonisation -> ?
 - press return to start ?
 - autoriser le dépassement jusqu'à la fin des réactions en chaine
+- selecteur de skin au (premier?) lancement?
 
 TODO for 0.4
 ------------
