--- a/software/TODO
+++ b/software/TODO
@@ -14,6 +14,8 @@ TODO for 0.3
 - press return to start ?
 - autoriser le dépassement jusqu'à la fin des réactions en chaine
 - selecteur de skin au (premier?) lancement?
+- un "echap" au change skin devrait faire disparaitre tous les menus
+- le jeu ne devrait pas recharger les graphs quand on selectionne le thème en cours d'utilisation
 
 TODO for 0.4
 ------------
