--- a/software/ChangeLog
+++ b/software/ChangeLog
@@ -3,12 +3,9 @@
 - Nouveau theme vectoriel
 - Ajout du menu option
 - Ajout du menu "êtes-vous sûr de vouloir quitter ?"
-- Script qui génère un package
-- Script qui installe le jeu dans /usr/local/games/openalchemist
-- Script qui génère un binaire statique
 - Corrections de bugs
-- Utilisation de Scons pour la compilation
-- Record supprimé si on annule pendant le HightScoreState
+- Ajout des autotools
+- Record supprimé si on annule pendant le HighScoreState
 
 * 0.2 * - 15/08/2006
 
