--- a/software/ChangeLog
+++ b/software/ChangeLog
@@ -6,6 +6,8 @@
 - Corrections de bugs
 - Ajout des autotools
 - Record supprimé si on annule pendant le HighScoreState
+- Ajout des combos
+- Skin Aqua redessiné
 
 * 0.2 * - 15/08/2006
 
