--- a/TODO
+++ b/TODO
@@ -8,11 +8,16 @@ TODO for 0.3
 
 bugs:
 -Dans la démo: La jauge devient verte comme si on battait un score quand la pièce se transforme. -> Reglé
--J'ai eu un problème de thème bloqué alors qu'il n'aurait pas dû après une partie -> les skins ne se débloquent que si on va jusqu'au bout de la partie
+-J'ai eu un problème de thème bloqué alors qu'il n'aurait pas dû après une partie -> les skins ne se débloquent que si on va jusqu'au bout de la partie // j'avais été au bout de la partie, mais le bug c'est pas reproduit depuis.
+-dans la démo: score hallucinant après la disparition des pièces
+-disparition des pièces
+
 
 TODO for 0.4
 ------------
 
+- rendre le selecteur de thème plus visible
+- refaire les explication en bon anglais.
 - Sounds & music
 - une touche d'aide, press H for help? --> liste des commandes, etc?
 
