--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,4 +1,5 @@
 * 0.4 * - under development
+#455 : Ajout d'un nouveau système de menu (en interne, MenuState.h)
 #451 : Ajout du mode 16:9 wide screen (uniquement disponible avec OpenGL)
 #451 : Ajout du fichier .desktop
 #450 : Split de la fonction Board::detect_to_destroy();
